add main page of tooltip

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             <div class="container">
                 <div class="preview__inner">
 
-                    <div class="card">
+
+
+                    <a class="card" href="./pages/layout_tooltip.html">
                         <div class="card__item">
 
                             <div class="tooltip tooltip_preview">
@@ -81,12 +83,12 @@
                         </div>
 
                         <div class="card__name">
-                            <a class="card__title" href="./05-lection3/01-tooltip/index.html">Tooltip</a>
+                            <div class="card__title" href="./05-lection3/01-tooltip/index.html">Tooltip</div>
                             <div class="card__subtitle">Container</div>
                         </div>
-                    </div>
+                    </a>
 
-                    <div href="#" class="card">
+                    <a class="card" href="./05-lection3/01-tooltip/index.html" >
 
 
                         <div class="card__item card__item_form">
@@ -177,12 +179,12 @@
                         </div>
 
                         <div class="card__name">
-                            <a class="card__title" href="./05-lection3/01-tooltip/index.html">Custom form elements</a>
+                            <div class="card__title">Custom form elements</div>
                             <div class="card__subtitle">Element</div>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="card">
+                    <a class="card" href="./05-lection3/01-tooltip/index.html">
                         <div class="card__item">
                             <div class="calendar calendar_preview">
                                 <div class="calendar__title">October 2019</div>
@@ -235,40 +237,48 @@
                             </div>
                         </div>
                         <div class="card__name">
-                            <a class="card__title" href="./05-lection3/01-tooltip/index.html">Calendar</a>
+                            <div class="card__title">Calendar</div>
                             <div class="card__subtitle">Container</div>
                         </div>
 
-                    </div>
+                    </a>
 
-                    <div class="card">
+                    <a class="card card_modal" href="./05-lection3/01-tooltip/index.html">
                         <div class="card__item">
+
                             <div class="modal modal_preview">
-                                <div class="modal__window">
+                                <div class="modal__window modal__window_preview">
 
-                                    <div class="modal__inputs">
-                                        <label class="modal__input"> Name
-                                            <input type="text" placeholder="Plaseholder" class="modal__item">
-                                        </label>
+                                    <div class="input input_preview">
+                                        <label for="input1" class="input__title input__title_preview">Name</label>
+                                        <input type="text" class="input__field input__field_preview" id="input1"
+                                            placeholder="Placeholder">
 
-                                        <label class="modal__input">Email
-                                            <input type="text" placeholder="Plaseholder" class="modal__item">
-                                        </label>
                                     </div>
+
+                                    <div class="input input_preview">
+                                        <label for="input1" class="input__title input__title_preview">Email</label>
+                                        <input type="text" class="input__field input__field_preview" id="input1"
+                                            placeholder="Placeholder">
+
+                                    </div>
+                                    <button class="btn btn_primary btn_preview">
+                                        Submit
+                                    </button>
                                 </div>
 
 
                             </div>
+
                         </div>
 
                         <div class="card__name">
-                            <a class="card__title" href="./05-lection3/01-tooltip/index.html">Modal dialog</a>
+                            <div class="card__title">Modal dialog</div>
                             <div class="card__subtitle">Container</div>
                         </div>
-                    </div>
+                    </a>
 
-
-                    <div class="card">
+                    <a class="card" href="./05-lection3/01-tooltip/index.html">
                         <div class="card__item">
                             <div class="histogram histogram_preview">
                                 <div class="histogram__top">
@@ -276,7 +286,9 @@
                                         <div class="histogram__title">Total orders</div>
                                         <div class="histogram__number">50254</div>
                                     </div>
-                                    <div class="histogram__right-part"><a class="histogram__link" href="#">View all</a></div>
+                                    <div class="histogram__right-part">
+                                        <div class="histogram__link" href="#">View all</div>
+                                    </div>
                                 </div>
                                 <div class="histogram__chart">
                                     <div class="histogram__column" style="height:50%"></div>
@@ -315,12 +327,12 @@
                         </div>
 
                         <div class="card__name">
-                            <a class="card__title" href="./05-lection3/01-tooltip/index.html">Histogram</a>
+                            <div class="card__title">Histogram</div>
                             <div class="card__subtitle">Element</div>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="card">
+                    <a class="card" href="./05-lection3/01-tooltip/index.html">
                         <div class="card__item">
                             <div class="avatar">
                                 <div class="avatar__background">
@@ -330,11 +342,11 @@
                             </div>
                         </div>
                         <div class="card__name">
-                            <a class="card__title" href="./05-lection3/01-tooltip/index.html">Avatar</a>
+                            <div class="card__title">Avatar</div>
                             <div class="card__subtitle">Element</div>
                         </div>
 
-                    </div>
+                    </a>
                 </div>
             </div>
 
