--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 
 <head>
     <link rel="stylesheet" href="./assets/css/main.css">
+    <script defer src="./10-lection8/01-theme-changer/theme-changer.js"></script>
 </head>
 
 <body>
-    <div class="page" data-theme-dark>
+    <div class="page">
         <header class="header">
             <div class="container">
                 <div class="header__top">
@@ -34,10 +35,10 @@
 
                                 <label class="toggler">
                                     <div class="toggler__title"></div>
-                                    <input type="checkbox" class="toggler__input">
+                                    <input type="checkbox" class="toggler__input" id="theme-changer">
                                     <div class="toggler__state">
                                         <div class="toggler__control">
-                                            <div class="toggler__switcher" id="theme-changer"></div>
+                                            <div class="toggler__switcher"></div>
                                         </div>
 
                                     </div>
