--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -14,7 +14,7 @@
                 <div class="histogram__title">Total orders</div>
                 <div class="histogram__number">50254</div>
             </div>
-            <div class="histogram__right-part"><a class="histogram__link" href="#">View all</a></div>
+            <!-- <div class="histogram__right-part"><a class="histogram__link" href="#">View all</a></div> -->
         </div>
         <div class="histogram__chart">
             <div class="histogram__column" style="height:50%"></div>
