--- a/index.html
+++ b/index.html
@@ -117,15 +117,17 @@
 
                                     <a class="card" href="./pages/layout_tooltip.html">
                                         <div class="card__item">
+                                            <div class="card__align">
+                                                <div class="tooltip">
+                                                    <svg class="tooltip__trigger">
+                                                        <use xlink:href="./assets/images/icons/sprite.svg#question">
+                                                        </use>
+                                                    </svg>
 
-                                            <div class="tooltip tooltip_preview">
-                                                <svg class="tooltip__trigger">
-                                                    <use xlink:href="./assets/images/icons/sprite.svg#question"></use>
-                                                </svg>
-
-                                                <div class="tooltip__bubble tooltip__bubble_preview">Helper Text</div>
+                                                    <div class="tooltip__bubble tooltip__bubble_preview">Helper Text
+                                                    </div>
+                                                </div>
                                             </div>
-
                                         </div>
 
                                         <div class="card__name">
@@ -138,7 +140,7 @@
                                     <a class="card" href="./pages/layout_forms.html">
 
 
-                                        <div class="card__item card__item_form">
+                                        <div class="card__item">
                                             <div class="card__align">
 
                                                 <div class="card__wrapper">
@@ -146,9 +148,11 @@
                                                         <input type="checkbox" class="checkbox__input">
                                                         <div class="checkbox__state">
                                                             <div class="checkbox__control">
-                                                                <svg class="checkbox__icon" >
-                                                                    <use xlink:href="../../assets/images/icons/sprite.svg#check"></use>
-                                                            </svg>
+                                                                <svg class="checkbox__icon">
+                                                                    <use
+                                                                        xlink:href="../../assets/images/icons/sprite.svg#check">
+                                                                    </use>
+                                                                </svg>
 
                                                             </div>
                                                             <div class="checkbox__title">Default</div>
@@ -159,9 +163,11 @@
                                                         <input type="checkbox" checked class="checkbox__input">
                                                         <div class="checkbox__state">
                                                             <div class="checkbox__control">
-                                                                <svg class="checkbox__icon" >
-                                                                    <use xlink:href="../../assets/images/icons/sprite.svg#check"></use>
-                                                            </svg>
+                                                                <svg class="checkbox__icon">
+                                                                    <use
+                                                                        xlink:href="../../assets/images/icons/sprite.svg#check">
+                                                                    </use>
+                                                                </svg>
 
                                                             </div>
                                                             <div class="checkbox__title">Checked</div>
@@ -173,9 +179,11 @@
                                                         <input type="checkbox" disabled class="checkbox__input">
                                                         <div class="checkbox__state">
                                                             <div class="checkbox__control">
-                                                                <svg class="checkbox__icon" >
-                                                                    <use xlink:href="../../assets/images/icons/sprite.svg#check"></use>
-                                                            </svg>
+                                                                <svg class="checkbox__icon">
+                                                                    <use
+                                                                        xlink:href="../../assets/images/icons/sprite.svg#check">
+                                                                    </use>
+                                                                </svg>
 
                                                             </div>
                                                             <div class="checkbox__title">Disabled</div>
@@ -195,7 +203,8 @@
                                                     </label>
 
                                                     <label class="radio">
-                                                        <input type="radio" checked class="radio__input" name="radio" value="2">
+                                                        <input type="radio" checked class="radio__input" name="radio"
+                                                            value="2">
                                                         <div class="radio__state">
                                                             <div class="radio__control">
                                                                 <div class="radio__circle"></div>
@@ -203,9 +212,10 @@
                                                             <div class="radio__title">Checked</div>
                                                         </div>
                                                     </label>
-                                                    
+
                                                     <label class="radio">
-                                                        <input type="radio" disabled class="radio__input" name="radio" value="3">
+                                                        <input type="radio" disabled class="radio__input" name="radio"
+                                                            value="3">
                                                         <div class="radio__state">
                                                             <div class="radio__control">
                                                                 <div class="radio__circle"></div>
@@ -291,12 +301,12 @@
                                         <div class="card__item">
 
                                             <div class="modal modal_preview">
-                                                <div class="modal__window modal__window_preview">
+                                                <div class="modal__window">
 
                                                     <div class="input input_preview">
                                                         <label for="input1"
                                                             class="input__title input__title_preview">Name</label>
-                                                        <input type="text" class="input__field input__field_preview"
+                                                        <input type="text" class="input__field"
                                                             id="input1" placeholder="Placeholder">
 
                                                     </div>
@@ -304,7 +314,7 @@
                                                     <div class="input input_preview">
                                                         <label for="input1"
                                                             class="input__title input__title_preview">Email</label>
-                                                        <input type="text" class="input__field input__field_preview"
+                                                        <input type="text" class="input__field"
                                                             id="input1" placeholder="Placeholder">
 
                                                     </div>
@@ -408,13 +418,12 @@
                                                         <input type="checkbox" class="checkbox__input">
                                                         <div class="checkbox__state">
                                                             <div class="checkbox__control">
-                                                                <svg class="checkbox__icon" width="15" height="13"
-                                                                    viewBox="0 0 15 13" fill="none"
-                                                                    xmlns="http://www.w3.org/2000/svg">
-                                                                    <path d="M1.5 7.5L5 11L13 2" stroke="white"
-                                                                        stroke-width="3" stroke-linecap="round"
-                                                                        stroke-linejoin="round" />
+                                                                <svg class="checkbox__icon">
+                                                                    <use
+                                                                        xlink:href="../../assets/images/icons/sprite.svg#check">
+                                                                    </use>
                                                                 </svg>
+
 
                                                             </div>
                                                             <div class="checkbox__title">Default</div>
@@ -425,13 +434,12 @@
                                                         <input type="checkbox" checked class="checkbox__input">
                                                         <div class="checkbox__state">
                                                             <div class="checkbox__control">
-                                                                <svg class="checkbox__icon" width="15" height="13"
-                                                                    viewBox="0 0 15 13" fill="none"
-                                                                    xmlns="http://www.w3.org/2000/svg">
-                                                                    <path d="M1.5 7.5L5 11L13 2" stroke="white"
-                                                                        stroke-width="3" stroke-linecap="round"
-                                                                        stroke-linejoin="round" />
+                                                                <svg class="checkbox__icon">
+                                                                    <use
+                                                                        xlink:href="../../assets/images/icons/sprite.svg#check">
+                                                                    </use>
                                                                 </svg>
+
 
                                                             </div>
                                                             <div class="checkbox__title">Checked</div>
@@ -443,13 +451,12 @@
                                                         <input type="checkbox" disabled class="checkbox__input">
                                                         <div class="checkbox__state">
                                                             <div class="checkbox__control">
-                                                                <svg class="checkbox__icon" width="15" height="13"
-                                                                    viewBox="0 0 15 13" fill="none"
-                                                                    xmlns="http://www.w3.org/2000/svg">
-                                                                    <path d="M1.5 7.5L5 11L13 2" stroke="white"
-                                                                        stroke-width="3" stroke-linecap="round"
-                                                                        stroke-linejoin="round" />
+                                                                <svg class="checkbox__icon">
+                                                                    <use
+                                                                        xlink:href="../../assets/images/icons/sprite.svg#check">
+                                                                    </use>
                                                                 </svg>
+
 
                                                             </div>
                                                             <div class="checkbox__title">Disabled</div>
@@ -470,8 +477,7 @@
 
 
                                                     <label class="radio">
-                                                        <input type="radio" class="radio__input" name="radio"
-                                                            value="2">
+                                                        <input type="radio" class="radio__input" name="radio" value="2">
                                                         <div class="radio__state">
                                                             <div class="radio__control">
                                                                 <div class="radio__circle"></div>
