--- a/index.html
+++ b/index.html
@@ -585,15 +585,17 @@
 
                                     <a class="card" href="./pages/layout_tooltip.html">
                                         <div class="card__item">
+                                            <div class="card__align">
+                                                <div class="tooltip">
+                                                    <svg class="tooltip__trigger">
+                                                        <use xlink:href="./assets/images/icons/sprite.svg#question">
+                                                        </use>
+                                                    </svg>
 
-                                            <div class="tooltip tooltip_preview">
-                                                <svg class="tooltip__trigger">
-                                                    <use xlink:href="./assets/images/icons/sprite.svg#question"></use>
-                                                </svg>
-
-                                                <div class="tooltip__bubble tooltip__bubble_preview">Helper Text</div>
+                                                    <div class="tooltip__bubble tooltip__bubble_preview">Helper Text
+                                                    </div>
+                                                </div>
                                             </div>
-
                                         </div>
 
                                         <div class="card__name">
@@ -602,7 +604,6 @@
                                             <div class="card__subtitle">Container</div>
                                         </div>
                                     </a>
-
 
                                     <a class="card" href="./05-lection3/01-tooltip/index.html">
                                         <div class="card__item">
